--- a/css/style.css
+++ b/css/style.css
@@ -39,15 +39,18 @@ p {
 }
 .main {
   min-height: 100px;
-  background-color: #f00;
   flex-grow: 1;
   min-height: calc(100vh - 199px);
+  padding-left: 15px;
+  padding-right: 15px;   
+
 }
 .left {
   min-height: 100px;
   background-color: orange;
   width: 250px;
   order: -1;
+  
 }
 .right {
   min-height: 100px;
@@ -96,7 +99,14 @@ p {
   padding: 0;
   list-style: none;
   display: table;
+  margin-left: auto;
+  margin-right: auto;
+
+  }
   
+  .menu__list.active {
+    display: block;
+    
 }
 .menu__item{
   float: left;
@@ -120,18 +130,109 @@ p {
   background-color: rgba(0, 0, 0, 0.3);
 }
 
-.breadcrum {
-text-align: right;
-background: linear-gradient(to right, rgba(114,114,114,0.8) 0%,rgba(114,114,114,0.8) 1%,rgba(0,0,0,0.8) 100%);
+
+
+
+
+.menu__hamburger {
+  width: 60px;
+  height: 45px;
+  position: relative;
+  margin: 10px auto;
+  transform: rotate(0deg);
+  transition: .5s ease-in-out;
+  cursor: pointer;
+  display: none;
+  
+}
+.menu__hamburger span {
+  display: block;
+  position: absolute;
+  height: 6px;
+  width: 50%;
+  background: #ffffff;
+  opacity: 1;
+  transform: rotate(0deg);
+  transition: .25s ease-in-out;
+}
+.menu__hamburger span:nth-child(even) {
+  left: 50%;
+  border-radius: 0 9px 9px 0;
+}
+.menu__hamburger span:nth-child(odd) {
+  left:0px;
+  border-radius: 9px 0 0 9px;
+}
+.menu__hamburger span:nth-child(1), .menu__hamburger span:nth-child(2) {
+  top: 0px;
+}
+.menu__hamburger span:nth-child(3), .menu__hamburger span:nth-child(4) {
+  top: 15px;
+}
+.menu__hamburger span:nth-child(5), .menu__hamburger span:nth-child(6) {
+  top: 30px;
+}
+.menu__hamburger.open span:nth-child(1),.menu__hamburger.open span:nth-child(6) {
+  transform: rotate(45deg);
+}
+.menu__hamburger.open span:nth-child(2),.menu__hamburger.open span:nth-child(5) {
+  transform: rotate(-45deg);
+}
+.menu__hamburger.open span:nth-child(1) {
+  left: 5px;
+  top: 7px;
+}
+.menu__hamburger.open span:nth-child(2) {
+  left: calc(50% - 5px);
+  top: 7px;
+}
+.menu__hamburger.open span:nth-child(3) {
+  left: -50%;
+  opacity: 0;
+}
+.menu__hamburger.open span:nth-child(4) {
+  left: 100%;
+  opacity: 0;
+}
+.menu__hamburger.open span:nth-child(5) {
+  left: 5px;
+  top: 29px;
+}
+.menu__hamburger.open span:nth-child(6) {
+  left: calc(50% - 5px);
+  top: 29px;
 }
 
-.bredcrum a {
+
+
+
+
+
+
+
+
+
+
+
+.breadcrumb {
+  text-align: right;
+  background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,0.8) 100%);
+  padding: 10px 30px;
+  border-radius: 7px;
+}
+
+.breadcrumb a {
   font-weight: bold;
 }
-.bredcrum span {
+.breadcrumb span {
   color: #ffffff;
   letter-spacing: 2px;
   font-size: 0.8rem;
+}
+.breadcrumb .fas {
+  color: #ffffff;
+  padding: 0 5px 0 9px;
+  font-size: 14px;
 }
 
 /*footer start*/
@@ -176,9 +277,25 @@ background: linear-gradient(to right, rgba(114,114,114,0.8) 0%,rgba(114,114,114,
 .footer .widget{
   color: #eeeeee;
 }
-
 /*footer end*/
 
+.content {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -10px;
+  margin-right: -10px;
+  padding-top: 20px;
+}
+.content-item {
+  padding: 10px;   
+  width: 33.3333%; 
+  flex-grow: 1;
+
+}
+.content-item div {
+  background-color: #777;
+  height: 100px;
+}
 @media (max-width: 1024px) {
   .right {
     width: 100%;
@@ -196,7 +313,31 @@ background: linear-gradient(to right, rgba(114,114,114,0.8) 0%,rgba(114,114,114,
   .right {
     width: 50%;
   }
-}
+  .content-item {
+    width: 50%; 
+  }
+  .menu__hamburger {
+    display: block; 
+  }
+
+  .menu__list {
+     display: none; 
+    }
+
+    .menu__item {
+      float: none;
+      margin-left: 10px;
+      margin-right: 10px;
+      text-align: center;
+      
+    }
+
+    .menu__item a {
+      display: block;
+      
+    }
+  }
+
 @media (max-width: 640px) {
   .left {
     width: 100%;
